Add link to Google Font

--- a/app/app.html
+++ b/app/app.html
@@ -6,6 +6,7 @@
 		<link href="./css/katex.min.css" rel="stylesheet">
 		<link href="./css/bootstrap.min.css" rel="stylesheet">
 		<link href="./css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
 		<script>
 			( function() {
 				if ( !process.env.HOT ) {
