Require CSS files

--- a/app/app.html
+++ b/app/app.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ISLE Editor</title>
-		<link href="./css/katex.min.css" rel="stylesheet">
-		<link href="./css/bootstrap.min.css" rel="stylesheet">
-		<link href="./css/bootstrap-theme.min.css" rel="stylesheet">
-		<link href="./css/fixed-data-table.min.css" rel="stylesheet">
+		<link href="./css/katex.min.css" rel="stylesheet" type="text/css">
+		<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" >
+		<link href="./css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" >
+		<link href="./css/fixed-data-table.min.css" rel="stylesheet" type="text/css" >
+		<link href="./css/slick.min.css" rel="stylesheet" type="text/css" />
+		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" />
 		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
 		<script>
 			( function() {
