--- a/app/app.html
+++ b/app/app.html
@@ -21,6 +21,7 @@
 			}() );
 		</script>
 		<link href="./css/lesson.css" rel="stylesheet">
+		<link href="./css/editor.css" rel="stylesheet">
 	</head>
 	<body>
 	<div id="root"></div>
