Insert style sheet

--- a/app/app.html
+++ b/app/app.html
@@ -9,6 +9,7 @@
 		<link href="./css/fixed-data-table.min.css" rel="stylesheet" type="text/css" >
 		<link href="./css/slick.min.css" rel="stylesheet" type="text/css" />
 		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="./../node_modules/simplemde/dist/simplemde.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
 		<script>
 			( function() {
