--- a/app/app.html
+++ b/app/app.html
@@ -11,6 +11,7 @@
 		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="./../node_modules/simplemde/dist/simplemde.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" />
 		<script>
 			( function() {
 				if ( !process.env.HOT ) {
