--- a/app/app.html
+++ b/app/app.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>ISLE Editor</title>
 		<link href="./css/katex.min.css" rel="stylesheet" type="text/css">
-		<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" >
-		<link href="./css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" >
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 		<link href="./css/fixed-data-table.min.css" rel="stylesheet" type="text/css" >
 		<link href="./css/slick.min.css" rel="stylesheet" type="text/css" />
 		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" />
