--- a/app/app.html
+++ b/app/app.html
@@ -3,16 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ISLE Editor</title>
-		<link href="./css/katex.min.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+		<link href="./css/katex.min.css" rel="stylesheet" type="text/css" >
+		<link rel="stylesheet" href="./../node_modules/font-awesome/css/font-awesome.min.css" >
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" >
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css" >
 		<link href="./css/fixed-data-table.min.css" rel="stylesheet" type="text/css" >
-		<link href="./css/slick.min.css" rel="stylesheet" type="text/css" />
-		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" />
+		<link href="./css/slick.min.css" rel="stylesheet" type="text/css" >
+		<link href="./css/slick-theme.min.css" rel="stylesheet" type="text/css" >
 		<link rel="stylesheet" href="./../node_modules/simplemde/dist/simplemde.min.css">
-		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' />
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" />
-		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' >
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" >
+		<script src="https://cdn.plot.ly/plotly-latest.min.js" />
 		<script>
 			( function() {
 				if ( !process.env.HOT ) {
