--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ISLE Editor</title>
-		<link href="./css/katex.min.css" rel="stylesheet" type="text/css" >
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.css" integrity="sha384-B41nY7vEWuDrE9Mr+J2nBL0Liu+nl/rBXTdpQal730oTHdlrlXHzYMOhDU60cwde" crossorigin="anonymous">
 		<link rel="stylesheet" href="./../node_modules/font-awesome/css/font-awesome.min.css" >
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" >
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css" >
