--- a/app/app.html
+++ b/app/app.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css" >
 		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' >
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" >
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.css"/>
 		<script>
 			( function() {
 				if ( !process.env.HOT ) {
