--- a/app/app.html
+++ b/app/app.html
@@ -5,8 +5,7 @@
 		<title>ISLE Editor</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css" integrity="sha384-9eLZqc9ds8eNjO3TmqPeYcDj8n+Qfa4nuSiGYa6DjLNcv9BtN69ZIulL9+8CqC9Y" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css' >
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" >
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Inconsolata" rel="stylesheet" >
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.css"/>
 		<link href="./css/lesson.css" rel="stylesheet">
 		<link href="./css/editor.css" rel="stylesheet">
